--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     .full-width-card {
       background: rgba(230, 230, 224, 0.99);
-      padding: 1.5rem;
+      padding: 1rem;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       margin: 1rem;
       text-align: center;
@@ -170,7 +170,7 @@
   <!-- Full-Width Combined Card -->
   <div class="full-width-card">
     <p id="intro">
-      Not sure if the things you’ve seen should make you believe they’re fascist? Can’t trust your own eyes? 
+      Not sure if what you’ve seen is something a fascist would do? Can’t trust your own eyes?
     </p>
     <p>
       With this calculator, you can use Bayes’ Theorem to input a list of events, the likelihood a fascist would do them, and the likelihood a non-fascist would. Let the math guide your suspicions!
