--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bayesian Stats Page</title>
   <style>
+        html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -12,6 +17,8 @@
       background-image: url('stripesandstars.webp');
       background-repeat: repeat;
       background-size: cover;
+      display: flex;
+      flex-direction: column;
     }
 
     .header-image {
@@ -37,6 +44,7 @@
       flex-direction: column;
       gap: 1rem;
       padding: 1rem;
+      padding-bottom: 0rem;
     }
 
     @media (min-width: 768px) {
@@ -52,6 +60,7 @@
     .card {
       background: rgba(230, 230, 224, 0.99);
       padding: 1rem;
+      padding-bottom: 0rem;
       border-radius: 0;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       position: relative;
@@ -119,6 +128,7 @@
       background: rgba(255, 255, 255, 0.0);
       padding: 1rem;
       padding-top: 0rem;
+      padding-bottom: 0rem;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -131,6 +141,7 @@
       width: 100%;
       display: flex;
       justify-content: center;
+
     }
 
     .image-container img {
@@ -142,16 +153,14 @@
     right: 42%;
     top: 45%;
     transform-origin: calc(90% - 20px) center;
-    transform: rotate(0deg);
+    transform: rotate(-15deg);
     transition: transform 0.3s ease-in-out;
     z-index: 2;
     background: none;
+    overflow: hidden;
     }
 
-    .arm {
-      background: none;
-    }
-
+ 
     #prior-label {
       font-size: 1.2;
       font-weight: bold;
@@ -161,6 +170,17 @@
       font-size: 1.2;
       font-weight: bold;
     }
+
+    .footer {
+      text-align: center;
+      background: rgba(230, 230, 224, 0.99);
+      padding: 1rem;
+      box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+      position: relative;
+      z-index: 3;
+      font-size: 0.9rem;
+    }
+
   </style>
 </head>
 <body>
@@ -183,9 +203,9 @@
       <div class="card">
         <div>
           <!-- <span id="prior-label">Prior (or prior belief it is fascist)</span> -->
-          <label id="prior-label" for="prior">Prior (or prior belief it is fascist)</label>
-          <input type="range" id="prior" class="w-full" min="0" max="100" step="0.1" value="50" oninput="updatePriorValue(this)">
-          <div class="text-center" id="priorValue">50.0%</div>
+          <label id="prior-label" for="prior">Prior (did you already think this was fascist?)</label>
+          <input type="range" id="prior" class="w-full" min="1" max="99" step="1" value="50" oninput="updatePriorValue(this)">
+          <div class="text-center" id="priorValue">50%</div>
         </div>
         <div>
           <!-- Header Row -->
@@ -205,12 +225,12 @@
                 </span>
               <!-- <input type="text" class="border" placeholder="Describe event" value="Liking and sharing great "> -->
               <div class="slider-container">
-                <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-                <span class="slider-value">50.0%</span>
+                <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+                <span class="slider-value">50%</span>
               </div>
               <div class="slider-container">
-                <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-                <span class="slider-value">50.0%</span>
+                <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+                <span class="slider-value">50%</span>
               </div>
             </div>
 
@@ -222,12 +242,12 @@
                 </span>
               <!-- <input type="text" class="border" placeholder="Describe event" value="Liking and sharing great "> -->
               <div class="slider-container">
-                <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-                <span class="slider-value">50.0%</span>
+                <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+                <span class="slider-value">50%</span>
               </div>
               <div class="slider-container">
-                <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-                <span class="slider-value">50.0%</span>
+                <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+                <span class="slider-value">50%</span>
               </div>
             </div>
 
@@ -239,12 +259,12 @@
                 </span>
               <!-- <input type="text" class="border" placeholder="Describe event" value="Liking and sharing great "> -->
               <div class="slider-container">
-                <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-                <span class="slider-value">50.0%</span>
+                <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+                <span class="slider-value">50%</span>
               </div>
               <div class="slider-container">
-                <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-                <span class="slider-value">50.0%</span>
+                <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+                <span class="slider-value">50%</span>
               </div>
             </div>
 
@@ -256,12 +276,12 @@
                 </span>
               <!-- <input type="text" class="border" placeholder="Describe event" value="Liking and sharing great "> -->
               <div class="slider-container">
-                <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-                <span class="slider-value">50.0%</span>
+                <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+                <span class="slider-value">50%</span>
               </div>
               <div class="slider-container">
-                <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-                <span class="slider-value">50.0%</span>
+                <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+                <span class="slider-value">50%</span>
               </div>
             </div>
 
@@ -273,12 +293,12 @@
                 </span>
               <!-- <input type="text" class="border" placeholder="Describe event" value="Liking and sharing great "> -->
               <div class="slider-container">
-                <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-                <span class="slider-value">50.0%</span>
+                <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+                <span class="slider-value">50%</span>
               </div>
               <div class="slider-container">
-                <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-                <span class="slider-value">50.0%</span>
+                <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+                <span class="slider-value">50%</span>
               </div>
             </div>
 
@@ -292,7 +312,7 @@
     <!-- Right Panel -->
     <div class="panel">
       <div class="transparent-card">
-        <div class="posterior-label" id="result">Posterior (or likelihood it is Fascist): 50.0%</div>
+        <div class="posterior-label" id="result">Posterior (the likelihood the events indicate fascism): 50%</div>
         <div class="image-container">
           <img src="fasc.png" alt="Fascist Probability Image">
           <img src="fasc-arm.png" alt="Fascist Arm" class="arm" id="armImage">
@@ -300,15 +320,18 @@
       </div>
     </div>
   </div>
+  <footer class="footer">
+    © 2025  Created for satire and statistical fun
+  </footer>
 
   <script>
     function updatePriorValue(slider) {
-      document.getElementById('priorValue').innerText = parseFloat(slider.value).toFixed(1) + '%';
+      document.getElementById('priorValue').innerText = parseFloat(slider.value).toFixed(0) + '%';
       updatePosterior();
     }
 
     function updateSliderValue(slider) {
-      slider.nextElementSibling.innerText = parseFloat(slider.value).toFixed(1) + '%';
+      slider.nextElementSibling.innerText = parseFloat(slider.value).toFixed(0) + '%';
       updatePosterior();
     }
 
@@ -319,12 +342,12 @@
       newRow.innerHTML = `
         <input type="text" class="border" placeholder="Describe event">
         <div class="slider-container">
-          <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-          <span class="slider-value">50.0%</span>
+          <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+          <span class="slider-value">50%</span>
         </div>
         <div class="slider-container">
-          <input type="range" min="0" max="100" step="0.1" value="50" oninput="updateSliderValue(this)">
-          <span class="slider-value">50.0%</span>
+          <input type="range" min="1" max="99" step="1" value="50" oninput="updateSliderValue(this)">
+          <span class="slider-value">50%</span>
         </div>
       `;
       eventRows.appendChild(newRow);
@@ -355,16 +378,17 @@
       const P_E = likelihood_given_F * P_F + likelihood_given_notF * P_notF;
       const P_F_given_E = (likelihood_given_F * P_F) / P_E;
 
-      document.getElementById('result').innerText = `Posterior (or likelihood it is Fascist): ${(P_F_given_E * 100).toFixed(1)}%`;
+      document.getElementById('result').innerText = `Posterior (the likelihood the events indicate fascism): ${(P_F_given_E * 100).toFixed(0)}%`;
 
       // Rotate the arm based on posterior probability
       const armImage = document.getElementById('armImage');
+      const offset = -20
       const rotation =
         P_F_given_E <= 0.25
-          ? -45 // Clamped at 45° down
+          ? -90 // Clamped at 45° down
           : P_F_given_E >= 0.75
           ? 45 // Clamped at 45° up
-          : (P_F_given_E - 0.5) * 90; // Gradual rotation between -45° and +45°
+          : (P_F_given_E - 0.5) * 90 + offset; // Gradual rotation between -45° and +45°
 
       armImage.style.transform = `rotate(${rotation}deg)`;
     }
