--- a/index.html
+++ b/index.html
@@ -180,6 +180,14 @@
       font-size: 0.9rem;
     }
 
+    .bottom-card{
+      text-align: left;
+    }
+
+    .bottom-card h2{
+      text-align: center;
+    }
+
   </style>
 </head>
 <body>
@@ -318,6 +326,28 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="full-width-card bottom-card">
+
+        <h2>Understanding Bayes' Theorem and Applying It to Thought</h2>
+        <p>Bayes' Theorem helps us update our beliefs based on new evidence. Here's how it works:</p>
+        <ul>
+            <li><strong>Start with prior beliefs:</strong> What you initially think is true.</li>
+            <li><strong>Add new evidence:</strong> Evaluate new information.</li>
+            <li><strong>Update probabilities:</strong> Adjust your beliefs based on how likely the evidence is if your belief is true or false.</li>
+        </ul>
+        <p>We can apply this to critical thinking. For example, when evaluating actions or events, ask yourself:</p>
+        <ul>
+            <li>"Do I think a fascist would do this?"</li>
+            <li>"Do I think someone who is not a fascist would do this?"</li>
+        </ul>
+        <p>This approach helps contextualize actions and align them with broader patterns, avoiding the trap of evaluating things in isolation.</p>
+        <p>However, it’s important to note: if your prior belief is set at 1 (absolute certainty) or 0 (absolute impossibility), you are unlikely to let any new information change your mind. This rigid thinking can prevent you from adapting to new evidence and understanding the bigger picture.</p>
+        <p>In an era of misinformation, where we're often told to doubt our own perceptions, this method empowers us to integrate new evidence into our understanding and see the bigger picture.</p>
+
+    
+
   </div>
   <footer class="footer">
     © 2025  Created for satire and statistical fun
