more attempts at making it more responsive

--- a/index.html
+++ b/index.html
@@ -201,6 +201,17 @@
             body {
                 font-size: 16px;
             }
+            .header-row,
+          .input-row {
+            display: grid;
+            grid-template-columns: 26% 37% 37%;
+            gap: 0.5rem;
+            align-items: center;
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 1px solid black;
+          }
         }
         @media (max-width: 480px) {
             .container {
