fix arm on smaller screen

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               .arm {
                 width:100%;
                 right: 46% !important;
-                top: 45%;
+                top: 46% !important;
               }
             .container {
                 padding: 15px;
