--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       <div class="transparent-card">
         <div class="posterior-label" id="result">Posterior (Likelihood your reasoning suggests fascism): 50%</div>
         <div class="image-container">
-          <img src="fasc.png" class="fascist-dude" alt="Fascist Dude">
+          <img src="fasc2.png" class="fascist-dude" alt="Fascist Dude">
           <img src="fasc-arm.png" alt="Fascist Arm" class="arm" id="armImage">
         </div>
       </div>
